pom update, compilation