@@ -10,9 +10,9 @@
     <packaging>jar</packaging>
 
     <properties>
-        <java.version>23</java.version>
-        <maven.compiler.source>23</maven.compiler.source>
-        <maven.compiler.target>23</maven.compiler.target>
+        <java.version>21</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <exec.mainClass>com.nowshowing.UI.Main</exec.mainClass>
     </properties>
     <dependencies>
@@ -53,8 +53,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <release>23</release>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <release>21</release>
+                    
                     <archive>
                         <index>true</index>
                         <manifest>
